<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vin_bg"
    android:fillViewport="true"
    tools:context=".ui.createalbum.CreateAlbumFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_screen">

        <TextView
            android:id="@+id/tvCreateAlbumTitle"
            style="@style/TextAppearance.Vinilos.ScreenTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_album_title"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Nombre * -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAlbumName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:hint="@string/create_album_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCreateAlbumTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAlbumName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/vin_on_surface" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- URL de portada * -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAlbumCover"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/create_album_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAlbumName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAlbumCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:maxLines="1"
                android:textColor="@color/vin_on_surface" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Fecha de lanzamiento * -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAlbumReleaseDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/create_album_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAlbumCover">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAlbumReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:maxLines="1"
                android:textColor="@color/vin_on_surface" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Género * (Dropdown) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAlbumGenre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/create_album_genre"
            app:endIconContentDescription="@string/show_genre_dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAlbumReleaseDate">

            <AutoCompleteTextView
                android:id="@+id/actvAlbumGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/vin_on_surface" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Descripción -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAlbumDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/create_album_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAlbumGenre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAlbumDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textColor="@color/vin_on_surface" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sello discográfico * (Dropdown) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAlbumRecordLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:hint="@string/create_album_record_label"
            app:endIconContentDescription="@string/show_record_label_dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAlbumDescription">

            <AutoCompleteTextView
                android:id="@+id/actvAlbumRecordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/vin_on_surface" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Guardar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveAlbum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:layout_marginBottom="@dimen/space_xl"
            android:text="@string/create_album_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAlbumRecordLabel" />

        <ProgressBar
            android:id="@+id/pbCreateAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btnSaveAlbum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
