<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/AlbumListFragment">
    <fragment
        android:id="@+id/AlbumListFragment"
        android:name="com.misw.vinilos.ui.albums.AlbumListFragment"
        android:label="Albums"
        tools:layout="@layout/fragment_album_list">
        <action
            android:id="@+id/action_AlbumListFragment_to_AlbumDetailFragment"
            app:destination="@id/AlbumDetailFragment" />
        <action
            android:id="@+id/action_AlbumListFragment_to_CreateAlbumFragment"
            app:destination="@id/CreateAlbumFragment" />
    </fragment>

    <fragment
        android:id="@+id/CreateAlbumFragment"
        android:name="com.misw.vinilos.ui.createalbum.CreateAlbumFragment"
...
