<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vin_bg"
    android:paddingStart="@dimen/space_screen"
    android:paddingEnd="@dimen/space_screen"
    android:paddingTop="@dimen/space_screen">

    <TextView
        android:id="@+id/tvAlbumListTitle"
        style="@style/TextAppearance.Vinilos.ScreenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_albums"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAlbums"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/space_xl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlbumListTitle"
        tools:listitem="@layout/item_album" />


</androidx.constraintlayout.widget.ConstraintLayout>
